# collector

./: .ansible-lint  .ci-operator.yaml  .clang-format  .clang-tidy  .clangd  .coderabbit.yaml  .dockerignore  .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .snyk  .syft.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  Flakefile  Flakefile.sh  Makefile  Makefile-constants.mk  README.md  RELEASED_VERSIONS  RELEASED_VERSIONS.unsupported  SPEC.md  TEST_RELEASED_VERSIONS  collector-debian-packages.csv  collector-debian-packages.txt  collector-dependencies.txt  doc_map.md  integration-test  pod.yaml  rhtap.Dockerfile  rhtap2.Dockerfile  rox-proto  rpms.in.yaml  rpms.lock.yaml  rpms.rhel.repo  (+2 more)
collector/: .gitignore  CMakeLists.txt  COPYING.txt  Dockerfile  Dockerfile-b2d  Dockerfile-centos  Dockerfile-debian  Dockerfile-rhel  Dockerfile-ubuntu  LICENSE-kernel-modules.txt  Makefile  NOTICE-collector.txt  NOTICE-sysblock.txt  NOTICE-sysdig-driver.txt  README.md  Version.h.in  collector.cpp  connscrape.cpp  docker-compose-default-config-no-kafka.yml  docker-compose-default-config.yml  docker-compose-no-config.yml  docker-compose-v1.yaml  docker-compose-v1.yml  docker-compose.yml  excluded_progs.list  falcosecurity-libs  self-checks.cpp  standalone-chisel.lua  sysblock  sysdig
collector-rs/: Cargo.toml  plan.md  research.md
collector-rs/crates/collector-bin/: Cargo.toml
collector-rs/crates/collector-bpf/: Cargo.toml  build.rs
collector-rs/crates/collector-core/: Cargo.toml  build.rs
collector-rs/crates/collector-types/: Cargo.toml
collector/connscrape-test/: Dockerfile  connscrape-test.sh  nohup.out  test-connscrape-log.sh
collector/container/: .dockerignore  .gitignore  Dockerfile  Dockerfile-b2d  Dockerfile-centos  Dockerfile-rhel  Dockerfile-ubuntu  Dockerfile.combine  Dockerfile.cpaas  Dockerfile.dev  Dockerfile.template  Dockerfile.ubi  Dockerfile_rhel  Dockerfile_slim  NOTICE.txt  create-bundle.sh  dev.Dockerfile  konflux-slim.Dockerfile  konflux.Dockerfile  rhtap-slim.Dockerfile  rhtap.Dockerfile  status-check.sh
collector/container-combined/: Dockerfile
collector/container/devel/: extract-bundle.sh  final-step.sh  install.sh
collector/container/rhel/: .gitignore  Dockerfile  README.md  create-bundle.sh  create-prebuild.sh  extract-bundle.sh  final-step.sh  install.sh
collector/container/scripts/: apiVersion: extensions:v1beta1  bootstrap.sh  collector-wrapper.sh  download-support-package.sh  extract_secrets.sh  swarm_entrypoint.sh
collector/lib/: AbortHandler.cpp  AbortHandler.h  CMakeLists.txt  Channel.h  ChiselConsumer.cpp  ChiselConsumer.h  CivetWrapper.cpp  CivetWrapper.h  CollectionMethod.cpp  CollectionMethod.h  CollectorArgs.cpp  CollectorArgs.h  CollectorAssert.h  CollectorConfig.cpp  CollectorConfig.h  CollectorConfigInspector.cpp  CollectorConfigInspector.h  CollectorConnectionStats.h  CollectorException.h  CollectorOutput.cpp  CollectorOutput.h  CollectorRuntimeConfigInspector.cpp  CollectorRuntimeConfigInspector.h  CollectorService.cpp  CollectorService.h  CollectorSignalFormatter.cpp  CollectorSignalFormatter.h  CollectorStats.cpp  CollectorStats.h  CollectorStatsExporter.cpp  CollectorStatsExporter.h  CollectorVersion.h.in  ConfigLoader.cpp  ConfigLoader.h  ConnList.cpp  ConnScraper.cpp  ConnScraper.h  ConnTracker.cpp  ConnTracker.h  ContainerEngine.h  (+166 more)
collector/lib/common/: CMakeLists.txt  EnvVar.h  HostConfig.h  LogLevel.cpp  Logging.h  NRadix.h  ProtoUtil.cpp  ProtoUtil.h  SelfChecks.cpp  Utility.cpp  Utility.h
collector/lib/events/: Dispatcher.h  IEvent.h  Thing.cpp
collector/lib/grpc/: DuplexGRPC.h  GRPC.cpp  GRPC.h  GRPCUtil.cpp  GRPCUtil.h
collector/lib/log/: CMakeLists.txt  LogLevel.cpp  Logging.cpp  Logging.h
collector/lib/output/: CMakeLists.txt  DuplexGRPC.h  Formatter.cpp  Formatter.h  GRPC.cpp  GRPC.h  GRPCSignalServiceClient.cpp  GRPCSignalServiceClient.h  GRPCUtil.cpp  GRPCUtil.h  IClient.h  ISignalServiceClient.h  NetworkConnectionInfoServiceComm.cpp  NetworkConnectionInfoServiceComm.h  Output.cpp  Output.h  OutputClient.h  SensorClient.cpp  SensorClient.h  SensorClientFormatter.cpp  SensorClientFormatter.h  SignalServiceClient.h  StdoutSignalServiceClient.cpp  StdoutSignalServiceClient.h
collector/lib/runtime-control/: Config.cpp  Config.h  NamespaceSelector.cpp  NamespaceSelector.h  Service.cpp  Service.h
collector/lib/rust/: CMakeLists.txt
collector/lib/sources/: CMakeLists.txt  FalcoSource.cpp  FalcoSource.h  Source.h  SourceManager.cpp  SourceManager.h  Types.h
collector/lib/stats/: CMakeLists.txt  CollectorStats.h
collector/lib/system-inspector/: CMakeLists.txt  ContainerEngine.h  EventExtractor.cpp  EventExtractor.h  EventNames.cpp  EventNames.h  Service.cpp  (+4 more)
collector/notices/: abseil-cpp.txt  lean-mean-cpp-option-parser.txt  sysdig.txt
collector/proto/: CMakeLists.txt  api  gogoproto  internalapi  storage
collector/standalone/: CMakeLists.txt  bpf-scraper.cpp
collector/test/: .clang-tidy  AbortHandler_test.cpp  CMakeLists.txt  ChannelTest.cpp  CollectorArgs_test.cpp  CollectorConfigTest.cpp  CollectorOutputTest.cpp  ConfigLoaderTest.cpp  ConnScraperTest.cpp  ConnTrackerTest.cpp  ContainerMapWatcher_test.cpp  DriverCandidatesTest.cpp  EventMapTest.cpp  ExternalIPsConfigTest.cpp  FileDownloaderTest.cpp  GetContainers_test.cpp  GetKernelObjectTest.cpp  GetStatus_test.cpp  HostHeuristicsTest.cpp  HostInfoTest.cpp  MetricsTest.cpp  MockSysdig.h  MultiPathTest.cpp  NRadixTest.cpp  NetworkConnectionTest.cpp  NetworkSignalHandlerTest.cpp  NetworkSignalHandlerTest.h  NetworkStatusNotifierTest.cpp  OutputFormatterTest.cpp  OutputTest.cpp  PipelineTests.cpp  ProcessSignalFormatterTest.cpp  ProtoAllocatorTest.cpp  RateLimitTest.cpp  ResourceSelectorTest.cpp  RuntimeControlConfigTest.cpp  RuntimeControlNamespaceSelectorTest.cpp  SensorClientFormatterTest.cpp  StringViewTest.cpp  SysdigServiceTest.cpp  (+7 more)
collector/verified/: .gitignore  CMakeLists.txt  Makefile
userspace/sysdig/: CMakeLists.txt  KafkaClient.cpp  KafkaClient.h  sysdig.cpp  sysdig.h  sysdig_api.h
(+1542 files in other folders)
