load("@grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "v1",
    srcs = glob(["*.proto"]),
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/mwitkow/go-proto-validators:validator_proto",
        "//proto/data",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
        "@googleapi//:annotations_proto",
    ],
)

java_proto_library(
    name = "v1_java",
    visibility = ["//visibility:public"],
    deps = [":v1"],
)

java_grpc_library(
    name = "v1_grpc_java",
    srcs = [":v1"],
    visibility = ["//visibility:public"],
    deps = [":v1_java"],
)
