[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "scraper"

[dependencies]
anyhow = "1.0.95"
arrayvec = "0.7.6"
clap = { version = "4.5.23", features = ["derive"] }
clap_derive = "4.5.18"
libbpf-rs = "=0.25.0-beta.1"

[build-dependencies]
libbpf-cargo = "=0.25.0-beta.1"
vmlinux = { version = "0.0", git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }
