load("@grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "learner",
    srcs = glob(["*.proto"]),
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/mwitkow/go-proto-validators:validator_proto",
        "//proto/data",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
        "@googleapi//:annotations_proto",
    ],
)

java_proto_library(
    name = "learner_java",
    visibility = ["//visibility:public"],
    deps = [":learner"],
)

java_grpc_library(
    name = "learner_grpc_java",
    srcs = [":learner"],
    visibility = ["//visibility:public"],
    deps = [":learner_java"],
)
